# praca-magisterska

./: .gitignore  Cargo.toml  README.md  clear_test.sh  compile-shaders.sh  run.sh  valgrind.sh
benches/: criterion.rs  get.rs  initialisations.rs  insert.rs  remove.rs
notebook/: 02 world structure.ipynb  03 rendering.ipynb  04 rust examples.ipynb  05 world generation.ipynb  description.ipynb
src/: flags.rs  lib.rs  main.rs  simulation.rs  window_manager.rs
src/app/: app.rs  camera.rs  control_manager.rs  mod.rs  settings.rs  window_manager.rs
src/chunks_generators/: create_voxel.rs  cube.rs  floatings.rs  limited_peaks_and_valleys.rs  mod.rs  peaks_and_valleys.rs  test_10_floating_islands.rs  test_11_height_map.rs  test_11_high_map.rs  test_11_peaks_and_valleys.rs  test_12_high_map.rs  test_12_peaks_and_valleys.rs  test_13_plains_with_floatings.rs  test_1_empty.rs  test_2_single.rs  test_3_half.rs  test_4_half_random.rs  test_5_without_single.rs  test_6_full.rs  test_7_half_random_with_differenties.rs  test_8_full_with_differenties.rs  test_9_natural.rs  utilities.rs
src/measurements/: mod.rs
src/noise/: mod.rs  simplex_noise.rs
src/renderer/: __mod.rs  mod.rs
src/rendering/: buffer.rs  mod.rs  model.rs  model_n_buffers.rs  model_strip.rs  pipeline.rs  renderer.rs  texture.rs  vertex.rs
src/structure_tests/: mod.rs  octree.rs  quadtree.rs  tester.rs  tester_generators.rs  voxel_hasher.rs  voxel_list.rs  voxel_map.rs
src/world/: block.rs  chunk.rs  chunk_region_iterator.rs  mod.rs  ores.rs  visible_fragment.rs  voxel_vertices.rs  world.rs  (+5 more)
(+24 files in other folders)
